syntax = "proto3";
option java_multiple_files = true;
option java_package="com.AirPollutionTrackingApp.CheckHistoricalDataAnalysisServices";
import "CheckRealtimeAirQualityBDO.proto";
import "commons/common.proto";



service checkHistoricalDataAnalysisService{


  rpc checkHistoricalDataAnalysis(Request) returns(stream checkRealTimeAirQualityResponse);
}