syntax = "proto3";
option java_multiple_files = true;
option java_package="com.AirPollutionTrackingApp.CheckRealTimeAirQualityServices";
import "CheckRealtimeAirQualityBDO.proto";
import "commons/common.proto";


service CheckRealTimeAirQualityService{
  rpc CheckRealTimeAirQuality(Request)returns(checkRealTimeAirQualityResponse);
}